--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^5.0.1",
     "@google-cloud/translate": "^8.5.0",
-    "@prisma/client": "^6.3.1",
+    "@prisma/client": "^6.4.1",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
@@ -36,9 +36,11 @@
     "react": "^18.3.1",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.1.0",
     "react-leaflet": "^4.2.1",
     "react-native": "^0.77.0",
+    "react-router-dom": "^7.2.0",
     "react-share": "^5.1.0",
     "recharts": "^2.15.0",
     "stripe": "^15.12.0",
@@ -52,12 +54,12 @@
   "devDependencies": {
     "@types/leaflet": "^1.9.12",
     "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/react": "^18.3.18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.1",
     "postcss": "^8",
-    "prisma": "^6.3.1",
+    "prisma": "^6.4.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
